--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ngx-formly/bootstrap": "^5.10.22",
     "@ngx-formly/core": "^5.0.0",
     "@ngx-formly/material": "^5.0.0",
+    "bootstrap": "^4.5.3",
+    "ngx-bootstrap": "^7.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
