--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@auth0/auth0-angular": "^1.6.0",
     "@ngx-formly/bootstrap": "^5.10.22",
     "@ngx-formly/core": "^5.0.0",
     "@ngx-formly/material": "^5.0.0",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^4.6.0",
+    "bootstrap-select": "^1.13.18",
     "ngx-bootstrap": "^7.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
@@ -36,7 +38,6 @@
     "@angular/compiler-cli": "~12.2.0",
     "@ngx-formly/schematics": "^5.10.22",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
