--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
-    // "strictPropertyInitialization": false
+    "strictPropertyInitialization": false
 
   }
 }
