--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@auth0/auth0-angular": "^1.6.0",
+    "@kolkov/angular-editor": "^1.2.0",
     "@ngx-formly/bootstrap": "^5.10.22",
     "@ngx-formly/core": "^5.0.0",
     "@ngx-formly/material": "^5.0.0",
